objects/DDS_Cloud_Master__c.object
<CustomObject>
    <description>Master table for Dynamic Deal Score calculation for cloud offerings</description>
    <fields>
        <fullName>Cutoff_2__c</fullName>
        <description>What it Does? Store the score 2 cut off 
Downstream Impact? DDS 
Which department is owner? IT</description>
        <inlineHelpText>Up to what discount percent give a score 2. 
-111 means discount = Total Contractual Value, -999 means discount &lt; Total Contractual Value, -222 means .discount &lt;= Total Contractual Value and -888 means NA.</inlineHelpText>
        <label>Cutoff 2</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cutoff_3__c</fullName>
        <description>What it Does? Store the score 3 cut off 
Downstream Impact? DDS 
Which department is owner? IT</description>
        <inlineHelpText>Up to what discount percent give a score 3. 
-111 means discount = Total Contractual Value, -999 means discount &lt; Total Contractual Value, -222 means .discount &lt;= Total Contractual Value and -888 means NA.</inlineHelpText>
        <label>Cutoff 3</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cutoff_4__c</fullName>
        <description>What it Does? Store the score 4 cut off 
Downstream Impact? DDS 
Which department is owner? IT</description>
        <inlineHelpText>Up to what discount percent give a score 4. 
-111 means discount = Total Contractual Value, -999 means discount &lt; Total Contractual Value, -222 means .discount &lt;= Total Contractual Value and -888 means NA.</inlineHelpText>
        <label>Cutoff 4</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Deal_Size_From__c</fullName>
        <description>What it Does? Store the deal size range 
Downstream Impact? DDS 
Which department is owner? IT</description>
        <label>Deal Size From</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deal_Size_To__c</fullName>
        <description>What it Does? Store the deal size range 
Downstream Impact? DDS 
Which department is owner? IT</description>
        <label>Deal Size To</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deal_type__c</fullName>
        <description>What it Does? Store the Deal Type 
Downstream Impact? DDS 
Which department is owner? IT</description>
        <label>Deal type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Subscription</fullName>
                </value>
                <value>
                    <fullName>Amend Subscription</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Direct_Indirect__c</fullName>
        <description>What it Does? Shows its for Direct or Indirect 
Downstream Impact? DDS 
Which department is owner? IT</description>
        <label>Direct/Indirect</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>Indirect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Filter_Criteria__c</fullName>
        <label>Filter Criteria</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offering_Type__c</fullName>
        <description>What it Does? Store the offering type 
Downstream Impact? DDS 
Which department is owner? IT</description>
        <label>Offering Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PureCloud</fullName>
                </value>
                <value>
                    <fullName>PureConnect Premise</fullName>
                </value>
                <value>
                    <fullName>PureEngage Premise</fullName>
                </value>
                <value>
                    <fullName>PureConnect Premise Subscription</fullName>
                </value>
                <value>
                    <fullName>PureEngage Premise Subscription</fullName>
                </value>
                <value>
                    <fullName>PureConnect Premise Rental</fullName>
                </value>
                <value>
                    <fullName>PureEngage Premise Rental</fullName>
                </value>
                <value>
                    <fullName>PureConnect Cloud</fullName>
                </value>
                <value>
                    <fullName>PureEngage Cloud</fullName>
                </value>
                <value>
                    <fullName>PureEngage Cloud Partner PPU</fullName>
                </value>
                <value>
                    <fullName>PureConnect Cloud Partner PPU</fullName>
                </value>
                <value>
                    <fullName>Premier Edition Cloud</fullName>
                </value>
                <value>
                    <fullName>Outbound Engagement Cloud</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Offset_2__c</fullName>
        <description>What it Does? Store the Offset value for Deal score 3 
Downstream Impact? DDS 
Which department is owner? IT</description>
        <inlineHelpText>Additional added value for Score 2 calculation</inlineHelpText>
        <label>Offset 2</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Offset_3__c</fullName>
        <description>What it Does? Store the Offset value for Deal score 3 
Downstream Impact? DDS 
Which department is owner? IT</description>
        <inlineHelpText>Additional added value for Score 3 calculation</inlineHelpText>
        <label>Offset 3</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Offset_4__c</fullName>
        <description>What it Does? Store the Offset value for Deal score 4 
Downstream Impact? DDS 
Which department is owner? IT</description>
        <label>Offset 4</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <description>What it Does? Store the Product Category 
Downstream Impact? DDS 
Which department is owner? IT</description>
        <label>Product Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inbound</fullName>
                </value>
                <value>
                    <fullName>Analytics</fullName>
                </value>
                <value>
                    <fullName>Digital</fullName>
                </value>
                <value>
                    <fullName>Integration</fullName>
                </value>
                <value>
                    <fullName>Omnichannel Desktop</fullName>
                </value>
                <value>
                    <fullName>Outbound</fullName>
                </value>
                <value>
                    <fullName>Platform</fullName>
                </value>
                <value>
                    <fullName>Self Service</fullName>
                </value>
                <value>
                    <fullName>Workforce Optimization</fullName>
                </value>
                <value>
                    <fullName>Strict</fullName>
                </value>
                <value>
                    <fullName>Relaxed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region_Currency__c</fullName>
        <description>What it Does? Store the Region / Currency 
Downstream Impact? DDS 
Which department is owner? IT</description>
        <label>Region/Currency</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UOM__c</fullName>
        <label>UOM</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Per Seat Per Month</fullName>
                </value>
                <value>
                    <fullName>Per Port Per Month</fullName>
                </value>
                <value>
                    <fullName>Each</fullName>
                </value>
                <value>
                    <fullName>Per Minute</fullName>
                </value>
                <value>
                    <fullName>One Time Charge - Each</fullName>
                </value>
                <value>
                    <fullName>Seat</fullName>
                </value>
                <value>
                    <fullName>Per Month</fullName>
                </value>
                <value>
                    <fullName>One Time - Per Number</fullName>
                </value>
                <value>
                    <fullName>Enabled User per month</fullName>
                </value>
                <value>
                    <fullName>Per Agent Per Month</fullName>
                </value>
                <value>
                    <fullName>Per Add-on Per Month</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unique_Key__c</fullName>
        <label>Unique Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DDS Cloud Master</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Offering_Type__c</columns>
        <columns>Direct_Indirect__c</columns>
        <columns>Deal_Size_From__c</columns>
        <columns>Deal_Size_To__c</columns>
        <columns>Cutoff_2__c</columns>
        <columns>Cutoff_3__c</columns>
        <columns>Cutoff_4__c</columns>
        <columns>Cutoff_5__c</columns>
        <columns>Offset_2__c</columns>
        <columns>Offset_3__c</columns>
        <columns>Offset_4__c</columns>
        <columns>Offset_5__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>PureCloud</fullName>
        <columns>NAME</columns>
        <columns>Offering_Type__c</columns>
        <columns>Direct_Indirect__c</columns>
        <columns>Deal_Size_From__c</columns>
        <columns>Deal_Size_To__c</columns>
        <columns>Cutoff_2__c</columns>
        <columns>Cutoff_3__c</columns>
        <columns>Cutoff_4__c</columns>
        <columns>Cutoff_5__c</columns>
        <columns>Offset_2__c</columns>
        <columns>Offset_3__c</columns>
        <columns>Offset_4__c</columns>
        <columns>Offset_5__c</columns>
        <columns>Filter_Criteria__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Offering_Type__c</field>
            <operation>equals</operation>
            <value>PureCloud</value>
        </filters>
        <label>PureCloud</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PureConnectCloud</fullName>
        <columns>NAME</columns>
        <columns>Offering_Type__c</columns>
        <columns>Direct_Indirect__c</columns>
        <columns>Deal_Size_From__c</columns>
        <columns>Deal_Size_To__c</columns>
        <columns>Cutoff_2__c</columns>
        <columns>Cutoff_3__c</columns>
        <columns>Cutoff_4__c</columns>
        <columns>Cutoff_5__c</columns>
        <columns>Offset_2__c</columns>
        <columns>Offset_3__c</columns>
        <columns>Offset_4__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Offering_Type__c</field>
            <operation>equals</operation>
            <value>PureConnect Cloud</value>
        </filters>
        <label>PureConnect Cloud</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PureEngageCloud</fullName>
        <columns>NAME</columns>
        <columns>Offering_Type__c</columns>
        <columns>Deal_Size_From__c</columns>
        <columns>Deal_Size_To__c</columns>
        <columns>Direct_Indirect__c</columns>
        <columns>Cutoff_2__c</columns>
        <columns>Cutoff_3__c</columns>
        <columns>Cutoff_4__c</columns>
        <columns>Cutoff_5__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Offering_Type__c</field>
            <operation>equals</operation>
            <value>PureEngage Cloud</value>
        </filters>
        <label>PureEngage Cloud</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>DDS-{00000}</displayFormat>
        <label>DDS Cloud Master Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DDS Cloud Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>